Pipeline/java_rmi_activation/java_rmi_activationOutputResult.txt
Sample: ActivationDesc_6
----------------------------------------------------------------
output:
./java_rmi_activation/javaFiles/ActivationDesc_6.java:1: error: package java.rmi.activation does not exist
import java.rmi.activation.ActivationDesc;
                          ^
./java_rmi_activation/javaFiles/ActivationDesc_6.java:5: error: cannot find symbol
        ActivationDesc desc1 = new ActivationDesc(null, null, null, null);
        ^
  symbol:   class ActivationDesc
  location: class ActivationDesc_6
./java_rmi_activation/javaFiles/ActivationDesc_6.java:5: error: cannot find symbol
        ActivationDesc desc1 = new ActivationDesc(null, null, null, null);
                                   ^
  symbol:   class ActivationDesc
  location: class ActivationDesc_6
./java_rmi_activation/javaFiles/ActivationDesc_6.java:6: error: cannot find symbol
        ActivationDesc desc2 = new ActivationDesc(null, null, null, null);
        ^
  symbol:   class ActivationDesc
  location: class ActivationDesc_6
./java_rmi_activation/javaFiles/ActivationDesc_6.java:6: error: cannot find symbol
        ActivationDesc desc2 = new ActivationDesc(null, null, null, null);
                                   ^
  symbol:   class ActivationDesc
  location: class ActivationDesc_6
5 errors


================================================================

Sample: ActivationGroupDesc_6
----------------------------------------------------------------
output:
./java_rmi_activation/javaFiles/ActivationGroupDesc_6.java:1: error: package java.rmi.activation does not exist
import java.rmi.activation.ActivationGroupDesc;
                          ^
./java_rmi_activation/javaFiles/ActivationGroupDesc_6.java:5: error: cannot find symbol
        ActivationGroupDesc desc1 = new ActivationGroupDesc();
        ^
  symbol:   class ActivationGroupDesc
  location: class ActivationGroupDesc_6
./java_rmi_activation/javaFiles/ActivationGroupDesc_6.java:5: error: cannot find symbol
        ActivationGroupDesc desc1 = new ActivationGroupDesc();
                                        ^
  symbol:   class ActivationGroupDesc
  location: class ActivationGroupDesc_6
./java_rmi_activation/javaFiles/ActivationGroupDesc_6.java:6: error: cannot find symbol
        ActivationGroupDesc desc2 = new ActivationGroupDesc();
        ^
  symbol:   class ActivationGroupDesc
  location: class ActivationGroupDesc_6
./java_rmi_activation/javaFiles/ActivationGroupDesc_6.java:6: error: cannot find symbol
        ActivationGroupDesc desc2 = new ActivationGroupDesc();
                                        ^
  symbol:   class ActivationGroupDesc
  location: class ActivationGroupDesc_6
5 errors


================================================================

Sample: ActivationGroupID_6
----------------------------------------------------------------
output:
./java_rmi_activation/javaFiles/ActivationGroupID_6.java:1: error: package java.rmi.activation does not exist
import java.rmi.activation.ActivationGroupID;
                          ^
./java_rmi_activation/javaFiles/ActivationGroupID_6.java:5: error: cannot find symbol
        ActivationGroupID id1 = new ActivationGroupID();
        ^
  symbol:   class ActivationGroupID
  location: class ActivationGroupID_6
./java_rmi_activation/javaFiles/ActivationGroupID_6.java:5: error: cannot find symbol
        ActivationGroupID id1 = new ActivationGroupID();
                                    ^
  symbol:   class ActivationGroupID
  location: class ActivationGroupID_6
./java_rmi_activation/javaFiles/ActivationGroupID_6.java:6: error: cannot find symbol
        ActivationGroupID id2 = new ActivationGroupID();
        ^
  symbol:   class ActivationGroupID
  location: class ActivationGroupID_6
./java_rmi_activation/javaFiles/ActivationGroupID_6.java:6: error: cannot find symbol
        ActivationGroupID id2 = new ActivationGroupID();
                                    ^
  symbol:   class ActivationGroupID
  location: class ActivationGroupID_6
5 errors


================================================================

Sample: ActivationID_1
----------------------------------------------------------------
output:
./java_rmi_activation/javaFiles/ActivationID_1.java:1: error: package java.rmi.activation does not exist
import java.rmi.activation.ActivationID;
                          ^
./java_rmi_activation/javaFiles/ActivationID_1.java:5: error: cannot find symbol
        ActivationID id1 = new ActivationID(1L);
        ^
  symbol:   class ActivationID
  location: class ActivationID_1
./java_rmi_activation/javaFiles/ActivationID_1.java:5: error: cannot find symbol
        ActivationID id1 = new ActivationID(1L);
                               ^
  symbol:   class ActivationID
  location: class ActivationID_1
./java_rmi_activation/javaFiles/ActivationID_1.java:6: error: cannot find symbol
        ActivationID id2 = new ActivationID(1L);
        ^
  symbol:   class ActivationID
  location: class ActivationID_1
./java_rmi_activation/javaFiles/ActivationID_1.java:6: error: cannot find symbol
        ActivationID id2 = new ActivationID(1L);
                               ^
  symbol:   class ActivationID
  location: class ActivationID_1
./java_rmi_activation/javaFiles/ActivationID_1.java:7: error: cannot find symbol
        ActivationID id3 = new ActivationID(2L);
        ^
  symbol:   class ActivationID
  location: class ActivationID_1
./java_rmi_activation/javaFiles/ActivationID_1.java:7: error: cannot find symbol
        ActivationID id3 = new ActivationID(2L);
                               ^
  symbol:   class ActivationID
  location: class ActivationID_1
7 errors


================================================================

